--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(has)
 export(header)
 export(header.rmd)
 export(insertInText)
-export(libraryAll)
+export(library)
 export(libraryOne)
 export(not.data)
 export(not.environment)
@@ -16,8 +16,6 @@ export(not.integer)
 export(not.numeric)
 export(refresh)
 export(requireAll)
-export(runl)
-export(runl2)
 export(sample_by_column)
 export(sd.gm)
 export(vector_push)
