--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(has)
 export(header)
 export(header.rmd)
 export(insertInText)
-export(library)
+export(libraryAll)
 export(libraryOne)
 export(not.data)
 export(not.environment)
