--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,18 +4,17 @@ S3method(mean,gm)
 export("%!in%")
 export(clean)
 export(cv.gm)
-export(data_push)
 export(data_shuffle)
 export(has)
 export(header)
 export(header.rmd)
 export(insertInText)
 export(libraryAll)
-export(libraryOne)
 export(not.data)
 export(not.environment)
 export(not.integer)
 export(not.numeric)
+export(not.vector)
 export(refresh)
 export(requireAll)
 export(sample_by_column)
