--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,10 @@
 
 S3method(mean,gm)
 export("%!in%")
+export(add.header)
 export(clean)
 export(cv.gm)
 export(data_shuffle)
-export(has)
-export(header)
 export(header.rmd)
 export(insertInText)
 export(libraryAll)
@@ -16,8 +15,6 @@ export(not.integer)
 export(not.numeric)
 export(not.vector)
 export(refresh)
-export(requireAll)
-export(sample_by_column)
 export(sd.gm)
 export(vector_push)
 export(vector_shuffle)
