--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(header.rmd)
 export(insertInText)
 export(libraryAll)
 export(not.data)
+export(not.empty)
 export(not.environment)
 export(not.integer)
+export(not.null)
 export(not.numeric)
 export(not.vector)
 export(refresh)
