--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export("%nin%")
 export(add.header)
 export(add.snippet.clear)
+export(ai.duplicate)
 export(clean)
 export(cv.gm)
 export(data_push)
 export(data_shuffle)
+export(duplicate)
 export(g.mean)
 export(header.rmd)
 export(insertInText)
