--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%nin%")
 export(add.header)
 export(add.snippet.clear)
+export(add_key)
 export(ai.duplicate)
 export(clean)
 export(cv.gm)
@@ -11,8 +12,10 @@ export(data_shuffle)
 export(duplicate)
 export(g.mean)
 export(header.rmd)
+export(inc)
 export(insertInText)
 export(libraryAll)
+export(list_push)
 export(not.data)
 export(not.empty)
 export(not.environment)
