--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(not.integer)
 export(not.null)
 export(not.numeric)
 export(not.vector)
+export(number)
 export(refresh)
 export(sample_by_column)
 export(sd.gm)
