--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(duplicate)
 export(g.mean)
 export(header.rmd)
 export(inc)
+export(init)
 export(insertInText)
 export(libraryAll)
 export(list_push)
