--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(not.data)
 export(not.empty)
 export(not.environment)
 export(not.integer)
+export(not.logical)
 export(not.null)
 export(not.numeric)
 export(not.vector)
