--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(insertInText)
 export(libraryAll)
 export(list_push)
 export(not.data)
+export(not.duplicated)
 export(not.empty)
 export(not.environment)
 export(not.integer)
