--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(number)
 export(refresh)
 export(sample_by_column)
 export(sd.gm)
+export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
 importFrom(grDevices,graphics.off)
