--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_key)
 export(ai.duplicate)
 export(clean)
 export(cv.gm)
+export(data_pop)
 export(data_push)
 export(data_shuffle)
 export(duplicate)
