Key update to pop

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ai.duplicate)
 export(clean)
 export(cv.gm)
 export(data_pop)
+export(data_pop_filter)
 export(data_push)
 export(data_shuffle)
 export(duplicate)
