Updating individual R files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(init)
 export(insertInText)
 export(libraryAll)
 export(list_push)
+export(minus)
 export(not.data)
 export(not.duplicated)
 export(not.empty)
@@ -29,6 +30,7 @@ export(not.null)
 export(not.numeric)
 export(not.vector)
 export(number)
+export(plus)
 export(refresh)
 export(sample_by_column)
 export(sd.gm)
