--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,11 @@ Imports:
 Suggests: 
     rmarkdown,
     knitr,
-    qpdf
+    qpdf,
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 VignetteBuilder: knitr
 Language: en-US
 LazyData: false
 RoxygenNote: 7.2.3
+Config/testthat/edition: 3
