Update geo cv manuals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(data_push)
 export(data_shuffle)
 export(duplicate)
 export(g.mean)
+export(geo.cv)
 export(geo.mean)
 export(header.rmd)
 export(inc)
