Update prep for publish

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(plus)
 export(refresh)
 export(sample_by_column)
 export(sd.gm)
+export(states)
 export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
