Prep for initiation of version 0.4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(not.empty)
 export(not.environment)
 export(not.integer)
 export(not.logical)
+export(not.na)
 export(not.null)
 export(not.numeric)
 export(not.vector)
