--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,5 +39,6 @@ export(sample_by_column)
 export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
+export(yesNoBool)
 importFrom(grDevices,graphics.off)
 importFrom(stats,sd)
