--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(data_pop_filter)
 export(data_push)
 export(data_shuffle)
 export(duplicate)
+export(genImage)
 export(geo.cv)
 export(geo.mean)
 export(geo.sd)
