--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(not.numeric)
 export(not.vector)
 export(number)
 export(plus)
+export(rcolorconst)
 export(refresh)
 export(sample_by_column)
 export(vector_pop)
