--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add.header)
 export(add.snippet.clear)
 export(add_key)
 export(ai.duplicate)
+export(archivedPkgs)
 export(as.boolean)
 export(clean)
 export(data_pop)
