--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(add.header)
 export(add.snippet.clear)
 export(add_key)
 export(ai.duplicate)
-export(archivedPkgs)
+export(archivedPkg)
 export(as.boolean)
 export(clean)
 export(data_pop)
