--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ai.duplicate)
 export(archivedPkg)
 export(as.boolean)
 export(clean)
+export(compHist)
 export(data_pop)
 export(data_pop_filter)
 export(data_push)
