--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(plus)
 export(rcolorconst)
 export(refresh)
 export(sample_by_column)
+export(seq2)
 export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
