--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(is.image)
 export(libraryAll)
 export(list_push)
 export(minus)
+export(multiple)
 export(not.data)
 export(not.duplicated)
 export(not.empty)
