New function rdecomPkg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(not.vector)
 export(number)
 export(plus)
 export(rcolorconst)
+export(rdecomPkg)
 export(refresh)
 export(sample_by_column)
 export(seq3)
