--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_key)
 export(ai.duplicate)
 export(archivedPkg)
 export(as.boolean)
+export(bionic_txt)
 export(clean)
 export(compHist)
 export(data_pop)
