Finalizing image manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(rdecomPkg)
 export(refresh)
 export(sample_by_column)
 export(seq3)
+export(setOnce)
 export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
