--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,8 +40,8 @@ export(not.numeric)
 export(not.vector)
 export(number)
 export(plus)
+export(rDecomPkg)
 export(rcolorconst)
-export(rdecomPkg)
 export(refresh)
 export(sample_by_column)
 export(seq3)
