--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(is.image)
 export(libraryAll)
 export(list_push)
 export(minus)
+export(mix.colors)
 export(not.data)
 export(not.duplicated)
 export(not.empty)
