--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,8 @@ export(is.image)
 export(libraryAll)
 export(list_push)
 export(minus)
-export(mix.colors)
+export(mix.color)
+export(mix.cols.btw)
 export(not.data)
 export(not.duplicated)
 export(not.empty)
