--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(geo.cv)
 export(geo.mean)
 export(geo.sd)
 export(header.rmd)
+export(in.range)
 export(inc)
 export(init)
 export(insertInText)
