Update manual for in.range

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(not.vector)
 export(number)
 export(plus)
 export(rDecomPkg)
+export(randString)
 export(rcolorconst)
 export(refresh)
 export(sample_by_column)
