--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(insertInText)
 export(is.image)
 export(libraryAll)
 export(list_push)
+export(list_shuffle)
 export(minus)
 export(mix.color)
 export(mix.cols.btw)
