--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,10 @@ export(compHist)
 export(data_pop)
 export(data_pop_filter)
 export(data_push)
+export(data_rep)
 export(data_shuffle)
 export(duplicate)
+export(fAddDate)
 export(genRandImg)
 export(geo.cv)
 export(geo.mean)
