pairDist initial manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(list_shuffle)
 export(minus)
 export(mix.color)
 export(mix.cols.btw)
+export(newSuperVar)
 export(not.data)
 export(not.duplicated)
 export(not.empty)
@@ -46,6 +47,7 @@ export(not.null)
 export(not.numeric)
 export(not.vector)
 export(number)
+export(pairDist)
 export(plus)
 export(rDecomPkg)
 export(randString)
