strsplit combo functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,8 @@ export(rcolorconst)
 export(refresh)
 export(sample_by_column)
 export(setOnce)
+export(strsplit.bool)
+export(strsplit.num)
 export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
