--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(list_shuffle)
 export(minus)
 export(mix.color)
 export(mix.cols.btw)
+export(multiply)
 export(newSuperVar)
 export(not.data)
 export(not.duplicated)
@@ -52,6 +53,8 @@ export(plus)
 export(rDecomPkg)
 export(randString)
 export(rcolorconst)
+export(read.csv.print)
+export(read.table.print)
 export(refresh)
 export(sample_by_column)
 export(setOnce)
