--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(not.data)
 export(not.duplicated)
 export(not.empty)
 export(not.environment)
+export(not.exists)
 export(not.image)
 export(not.integer)
 export(not.logical)
