--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,3 +67,5 @@ export(vector_shuffle)
 export(yesNoBool)
 importFrom(grDevices,graphics.off)
 importFrom(stats,sd)
+importFrom(utils,read.csv)
+importFrom(utils,read.table)
