--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(data_pop_filter)
 export(data_push)
 export(data_rep)
 export(data_shuffle)
+export(date1to3)
+export(date3to1)
 export(duplicate)
 export(fAddDate)
 export(genRandImg)
@@ -28,6 +30,8 @@ export(inc)
 export(init)
 export(insertInText)
 export(is.image)
+export(is.lognormal)
+export(is.normal)
 export(libraryAll)
 export(list_push)
 export(list_shuffle)
@@ -61,6 +65,7 @@ export(sample_by_column)
 export(setOnce)
 export(strsplit.bool)
 export(strsplit.num)
+export(switch_rows)
 export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
