--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(insertInText)
 export(is.image)
 export(is.lognormal)
 export(is.normal)
+export(is.poisson)
+export(is.uniform)
 export(libraryAll)
 export(list_push)
 export(list_shuffle)
