--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(in.range)
 export(inc)
 export(init)
 export(insertInText)
+export(is.gamma)
 export(is.image)
 export(is.lognormal)
 export(is.normal)
