--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(genRandImg)
 export(geo.cv)
 export(geo.mean)
 export(geo.sd)
+export(has.error)
 export(header.rmd)
 export(in.range)
 export(inc)
@@ -31,10 +32,12 @@ export(init)
 export(insertInText)
 export(is.gamma)
 export(is.image)
+export(is.logistic)
 export(is.lognormal)
 export(is.normal)
 export(is.poisson)
 export(is.uniform)
+export(is.weibull)
 export(libraryAll)
 export(list_push)
 export(list_shuffle)
@@ -66,6 +69,7 @@ export(read.table.print)
 export(refresh)
 export(sample_by_column)
 export(setOnce)
+export(sim.logistic)
 export(strsplit.bool)
 export(strsplit.num)
 export(switch_rows)
