--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(setOnce)
 export(sim.logistic)
 export(strsplit.bool)
 export(strsplit.num)
+export(summarize.envobj)
 export(switch_rows)
 export(vector_pop)
 export(vector_push)
