--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(sim.logistic)
 export(strsplit.bool)
 export(strsplit.num)
 export(summarize.envobj)
+export(switch_cols)
 export(switch_rows)
 export(vector_pop)
 export(vector_push)
