--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ai.duplicate)
 export(archivedPkg)
 export(as.boolean)
 export(bionic_txt)
+export(checkDistribution)
 export(clean)
 export(compHist)
 export(data_pop)
@@ -69,7 +70,6 @@ export(read.table.print)
 export(refresh)
 export(sample_by_column)
 export(setOnce)
-export(sim.logistic)
 export(strsplit.bool)
 export(strsplit.num)
 export(summarize.envobj)
