--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(genRandImg)
 export(geo.cv)
 export(geo.mean)
 export(geo.sd)
+export(getGitHubRepoStart)
 export(has.error)
 export(header.rmd)
 export(in.range)
