--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,8 @@ export(genRandImg)
 export(geo.cv)
 export(geo.mean)
 export(geo.sd)
-export(getGitHubRepoStart)
+export(getGitRepoChange)
+export(getGitRepoStart)
 export(has.error)
 export(header.rmd)
 export(in.range)
