--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(in.range)
 export(inc)
 export(init)
 export(insertInText)
+export(is.cauchy)
 export(is.gamma)
 export(is.image)
 export(is.logistic)
