--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,12 +71,14 @@ export(read.csv.print)
 export(read.table.print)
 export(refresh)
 export(sample_by_column)
+export(setDisAlpha)
 export(setOnce)
 export(strsplit.bool)
 export(strsplit.num)
 export(summarize.envobj)
 export(switch_cols)
 export(switch_rows)
+export(unsetDisAlpha)
 export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
