Final Version 0.8 Update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(not.empty)
 export(not.environment)
 export(not.exists)
 export(not.image)
+export(not.inherits)
 export(not.integer)
 export(not.logical)
 export(not.na)
