--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(geo.mean)
 export(geo.sd)
 export(getGitRepoChange)
 export(getGitRepoStart)
+export(getWeekSeq)
 export(has.error)
 export(header.rmd)
 export(in.range)
