--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(inc)
 export(init)
 export(insertInText)
 export(is.cauchy)
+export(is.empty)
 export(is.gamma)
 export(is.image)
 export(is.logistic)
@@ -87,6 +88,7 @@ export(vector_pop)
 export(vector_push)
 export(vector_shuffle)
 export(yesNoBool)
+export(zscore)
 importFrom(grDevices,graphics.off)
 importFrom(stats,sd)
 importFrom(utils,read.csv)
