update zscore and mutate filter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(genRandImg)
 export(geo.cv)
 export(geo.mean)
 export(geo.sd)
+export(getDistribution)
 export(getGitRepoChange)
 export(getGitRepoStart)
 export(getWeekSeq)
@@ -53,6 +54,7 @@ export(minus)
 export(mix.color)
 export(mix.cols.btw)
 export(multiply)
+export(mutate_filter)
 export(ndecimal)
 export(newSuperVar)
 export(not.data)
