--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(has.error)
 export(header.rmd)
 export(in.range)
 export(inc)
+export(indexed)
 export(init)
 export(insertInText)
 export(is.cauchy)
