--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(geo.sd)
 export(getDistribution)
 export(getGitRepoChange)
 export(getGitRepoStart)
+export(getMyIP)
 export(getWeekSeq)
 export(has.error)
 export(header.rmd)
