--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(getGitRepoChange)
 export(getGitRepoStart)
 export(getMyIP)
 export(getWeekSeq)
+export(get_active_conn)
 export(has.error)
 export(header.rmd)
 export(in.range)
