--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,11 +22,13 @@ export(data_shuffle)
 export(date1to3)
 export(date3to1)
 export(duplicate)
+export(extract_IP)
 export(fAddDate)
 export(genRandImg)
 export(geo.cv)
 export(geo.mean)
 export(geo.sd)
+export(getDate)
 export(getDistribution)
 export(getGitRepoChange)
 export(getGitRepoStart)
