--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,6 @@ export(data_shuffle)
 export(date1to3)
 export(date3to1)
 export(duplicate)
-export(extract_IP)
 export(fAddDate)
 export(genRandImg)
 export(geo.cv)
@@ -30,7 +29,6 @@ export(getGitRepoChange)
 export(getGitRepoStart)
 export(getMyIP)
 export(getWeekSeq)
-export(get_active_conn)
 export(has.error)
 export(header.rmd)
 export(in.range)
@@ -86,13 +84,13 @@ export(refresh)
 export(sample_by_column)
 export(setDisAlpha)
 export(setOnce)
-export(sortLength)
+export(sort_length)
 export(strsplit.bool)
 export(strsplit.num)
 export(summarize.envobj)
 export(switch_cols)
 export(switch_rows)
-export(uniqLen)
+export(unique_len)
 export(unsetDisAlpha)
 export(vector_pop)
 export(vector_push)
