--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(not.null)
 export(not.numeric)
 export(not.vector)
 export(number)
+export(or)
 export(pairDist)
 export(plus)
 export(rDecomPkg)
