--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(data_shuffle)
 export(date1to3)
 export(date3to1)
 export(duplicate)
+export(extract_comments)
 export(fAddDate)
 export(genRandImg)
 export(geo.cv)
