--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(sample_by_column)
 export(setDisAlpha)
 export(setOnce)
 export(sort_length)
+export(sound_match)
 export(strsplit.bool)
 export(strsplit.num)
 export(summarize.envobj)
@@ -107,5 +108,6 @@ export(zscore)
 export(zscoreGrowthCurve)
 importFrom(grDevices,graphics.off)
 importFrom(stats,sd)
+importFrom(utils,adist)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
