--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,9 +46,11 @@ export(init)
 export(insertInText)
 export(is.Date)
 export(is.cauchy)
+export(is.decreasing)
 export(is.empty)
 export(is.gamma)
 export(is.image)
+export(is.increasing)
 export(is.leap)
 export(is.logistic)
 export(is.lognormal)
