--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(bionic_txt)
 export(chain_sep)
 export(clean)
 export(compHist)
+export(const)
 export(data_pop)
 export(data_pop_filter)
 export(data_push)
