--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(as.boolean)
 export(bionic_txt)
 export(chain_sep)
 export(clean)
+export(clean_file)
 export(compHist)
 export(const)
 export(data_pop)
@@ -27,7 +28,7 @@ export(date3to1)
 export(duplicate)
 export(error.out)
 export(extract_IP)
-export(extract_comments)
+export(extract_comment)
 export(fAddDate)
 export(genRandImg)
 export(geo.cv)
@@ -38,6 +39,7 @@ export(getDistribution)
 export(getGitRepoChange)
 export(getGitRepoStart)
 export(getWeekSeq)
+export(get_func_def)
 export(has.error)
 export(header.rmd)
 export(in.range)
@@ -94,6 +96,8 @@ export(rcolorconst)
 export(read.csv.print)
 export(read.table.print)
 export(refresh)
+export(remove_comment)
+export(remove_content_in_quotes)
 export(sample_by_column)
 export(setDisAlpha)
 export(setOnce)
@@ -104,6 +108,7 @@ export(strsplit.num)
 export(summarize.envobj)
 export(switch_cols)
 export(switch_rows)
+export(track_func)
 export(unique_len)
 export(unsetDisAlpha)
 export(vector_pop)
