--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(is.weibull)
 export(libraryAll)
 export(list_push)
 export(list_shuffle)
+export(math.qt)
 export(minus)
 export(mix.color)
 export(mix.cols.btw)
