--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: quickcode
 Type: Package
 Title: Quick and Essential 'R' Tricks for Better Scripts
-Version: 1.0.2
+Version: 1.0.3
 Authors@R: c(
     person("Obinna", "Obianom", email = "idonshayo@gmail.com", role = c("aut", "cre")),
     person("Brice", "Richard", email = "wem3mew@msn.com", role = "aut")
@@ -9,7 +9,7 @@ Authors@R: c(
 Maintainer: Obinna Obianom <idonshayo@gmail.com>
 Description: The NOT functions, 'R' tricks and a compilation of some simple quick plus often used 'R' codes to improve your scripts. Improve the quality and reproducibility of 'R' scripts.
 License: MIT + file LICENSE
-URL: https://quickcode.obi.obianom.com
+URL: https://quickcode.rpkg.net
 BugReports: https://github.com/oobianom/quickcode/issues
 Depends: 
     R (> 3.6)
