--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(is.normal)
 export(is.poisson)
 export(is.uniform)
 export(is.weibull)
+export(lastwd)
 export(libraryAll)
 export(list_push)
 export(list_shuffle)
