--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ai.duplicate)
 export(archivedPkg)
 export(as.boolean)
 export(bionic_txt)
+export(chain_func)
 export(chain_sep)
 export(clean)
 export(clean_file)
