--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export(remove_content_in_quotes)
 export(sample_by_column)
 export(setDisAlpha)
 export(setOnce)
+export(sort_file_type)
 export(sort_length)
 export(sound_match)
 export(strsplit.bool)
