--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(ai.duplicate)
 export(archivedPkg)
 export(as.boolean)
 export(bionic_txt)
+export(cat_to_num)
+export(cat_to_num2)
 export(chain_func)
 export(chain_sep)
 export(clean)
