--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(chain_func)
 export(chain_sep)
 export(clean)
 export(clean_file)
+export(clear)
 export(compHist)
 export(const)
 export(data_pop)
@@ -34,7 +35,6 @@ export(extract_IP)
 export(extract_comment)
 export(fAddDate)
 export(find_packages)
-export(genRandImg)
 export(geo.cv)
 export(geo.mean)
 export(geo.sd)
@@ -74,7 +74,6 @@ export(math.qt)
 export(minus)
 export(mix.color)
 export(mix.cols.btw)
-export(multiply)
 export(mutate_filter)
 export(ndecimal)
 export(newSuperVar)
