--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,21 @@ export(yesNoBool)
 export(zscore)
 export(zscoreGrowthCurve)
 importFrom(grDevices,graphics.off)
+importFrom(grDevices,rainbow)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,boxplot)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,rug)
+importFrom(stats,approx)
+importFrom(stats,density)
+importFrom(stats,mad)
+importFrom(stats,median)
+importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(utils,adist)
 importFrom(utils,read.csv)
