--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,7 +83,7 @@ export(math.qt)
 export(minus)
 export(mix.color)
 export(mix.cols.btw)
-export(mode)
+export(mode.calc)
 export(multihead_attention)
 export(mutate_filter)
 export(ndecimal)
