--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ export(read.table.print)
 export(refresh)
 export(remove_comment)
 export(remove_content_in_quotes)
+export(rm_empty_lines)
 export(rows.rep)
 export(sample_by_column)
 export(setDisAlpha)
