--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,7 +114,6 @@ export(read.table.print)
 export(refresh)
 export(remove_comment)
 export(remove_content_in_quotes)
-export(rm_empty_lines)
 export(rows.rep)
 export(sample_by_column)
 export(setDisAlpha)
@@ -129,6 +128,7 @@ export(summarize.envobj)
 export(switch_cols)
 export(switch_rows)
 export(track_func)
+export(trim.file)
 export(unique_len)
 export(unsetDisAlpha)
 export(vector_pop)
