--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,7 +55,7 @@ export(inc)
 export(indexed)
 export(init)
 export(insertInText)
-export(interpolate_tensor)
+export(iqr_outlier)
 export(is.Date)
 export(is.cauchy)
 export(is.decreasing)
@@ -81,7 +81,7 @@ export(minus)
 export(mix.color)
 export(mix.cols.btw)
 export(mode.calc)
-export(multihead_attention)
+export(multihead_att)
 export(mutate_filter)
 export(na.cumsum)
 export(ndecimal)
@@ -137,6 +137,8 @@ export(vector_shuffle)
 export(yesNoBool)
 export(zscore)
 export(zscoreGrowthCurve)
+export(zscore_outlier)
+export(zscore_outlier2)
 importFrom(grDevices,graphics.off)
 importFrom(grDevices,rainbow)
 importFrom(graphics,abline)
