--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,12 +17,14 @@ export(cat_to_num)
 export(cat_to_num2)
 export(chain_func)
 export(chain_sep)
+export(check_collinear)
 export(clean)
 export(clean_file)
 export(clear)
 export(cols.rep)
 export(compHist)
 export(const)
+export(create_shape)
 export(data_pop)
 export(data_pop_filter)
 export(data_push)
@@ -139,6 +141,14 @@ export(zscore)
 export(zscoreGrowthCurve)
 export(zscore_outlier)
 export(zscore_outlier2)
+importFrom(car,vif)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_fixed)
+importFrom(ggplot2,geom_polygon)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme_minimal)
 importFrom(grDevices,graphics.off)
 importFrom(grDevices,rainbow)
 importFrom(graphics,abline)
