--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/oobianom/quickcode/issues
 Depends: 
     R (> 3.6)
 Imports: 
+    car,
     utils,
     grDevices,
     stats,
